fix query from db for admin-schedule and user page